# DocuChat-API

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_wal.py
app/: config.py  main.py  session.py
app/api/: __init__.py  session.py
app/db/: engine.py  operations.py
docuchat_api/: __init__.py  config.py  main.py
docuchat_api/db/: __init__.py
ducuchat_api/: main.py
ducuchat_api/api/: router.py  session.py
